# Search-Kanji-Widget

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  joyo.csv  package.json  playwright.config.ts  webdriver.json
.devcontainer/: devcontainer.json
.github/workflows/: classroom.yml
playwright-tests/: search.test.ts
src/: lib.rs
